tests/fail/cast_struct_to_int/test.yap
struct Point {
    i32 x,
    i32 y
}
fn main() {
    Point p = [1, 2];
    i32 x = p.(i32);
}
